package edu.austral.dissis.chess.engine.pieces

interface PieceType
